--- a/index.html
+++ b/index.html
@@ -4,8 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div id="header">
+        <h1>Zenva Love</h1>
+    </div>
+    <div id="main">
+        <div class="row">
+            <div class="row">
+                <label>Gender</label>
+                <select id="gender">
+                    <option value="F">Female</option>
+                    <option value="M">Male</option>
+                    <option value="A">All</option>
+                </select>
+            </div>
+            <div class="row">
+                <label>Hobbies</label>
+                <input type="text" id="hobby">
+            </div>
+            <div class="row">
+                <button id="searchBtn">Search</button>
+            </div>
+        </div>
+        <div id="results">
+            <div class="person-row">
+                <img src="images/avatar1.png">
+                <div class="person-info">
+                    <div>Pedro</div>
+                    <div>Sports, pets, party</div>
+                </div>
+                <button>Add as friend</button>
+            </div>
+            <div class="person-row">
+                <img src="images/avatar1.png">
+                <div class="person-info">
+                    <div>Pedro</div>
+                    <div>Sports, pets, party</div>
+                </div>
+                <button>Add as friend</button>
+            </div>
+            <div class="person-row">
+                <img src="images/avatar1.png">
+                <div class="person-info">
+                    <div>Pedro</div>
+                    <div>Sports, pets, party</div>
+                </div>
+                <button>Add as friend</button>
+            </div>
+        </div>
+    </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
